--- a/imcat.1
+++ b/imcat.1
@@ -24,6 +24,14 @@ displays the specified images on a text terminal that supports colour.
 .SH "OPTIONS"
 .PP
 .PP
+\fB\-h\fR, \fB\--height\fR
+.RS 4
+set height of output image (image will maintain aspect ratio)
+.RE
+\fB\-w\fR, \fB\--width\fR
+.RS 4
+set width of output image (image will maintain aspect ratio)
+.RE
 \fB\--help\fR
 .RS 4
 shows command line syntax.
