--- a/imcat.1
+++ b/imcat.1
@@ -24,6 +24,10 @@ displays the specified images on a text terminal that supports colour.
 .SH "OPTIONS"
 .PP
 .PP
+\fB\-f\fR, \fB\--fit\fR
+.RS 4
+fit image to console size
+.RE
 \fB\-h\fR, \fB\--height\fR
 .RS 4
 set height of output image (image will maintain aspect ratio)
